Launcher/K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command
  template:
    metadata:
      labels:
        app: command
    spec:
      containers:
        - name: command
          image: dockerpoenyagua/command:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: command
  ports:
  - name: command
    protocol: TCP
    port: 80
    targetPort: 80
