Launcher/K8S/support-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: supportservice-srv
spec:
  type: NodePort
  selector:
    app: support
  ports:
    - name: supportservice
      protocol: TCP
      port: 80
      targetPort: 80
